fixes overlap issue with banner

--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -30,6 +30,7 @@ ul{
     position: fixed;
     background-color: #51314d;
     overflow: hidden;
+    z-index: 99;
 }
 
 .menu a{
